--- a/src/app/pages/produtos/produtos.component.css
+++ b/src/app/pages/produtos/produtos.component.css
@@ -1,19 +1,15 @@
 .category-section {
-  position: relative; /* Para que a posição fixa se relacione com o contêiner */
+  position: relative;
 }
 
-.product-card {
-  transition: transform 0.3s; /* Para animações mais suaves, se necessário */
+.category-section h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 20px;
+  border-bottom: 2px solid #e0e0e0;
+  padding-bottom: 10px;
 }
-
-.nav-sticky {
-  position: sticky;
-  top: 0; /* Mantém a barra no topo */
-  z-index: 100; /* Para garantir que fique acima de outros elementos */
-  background: white; /* Fundo branco para melhor contraste */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
-}
-
 
 .category {
   padding: 15px;
@@ -22,6 +18,15 @@
   background-color: #f9f9f9;
   margin-top: 10px;
 }
+
+.nav-sticky {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
 
 .mat-tab-nav-bar {
   background-color: #f1f1f1;
@@ -38,6 +43,10 @@ mat-tab-nav-bar {
 }
 
 /* Estilos para os cards */
+.product-card {
+  transition: transform 0.3s;
+}
+
 .product-card {
   display: flex;
   justify-content: space-between;
@@ -68,16 +77,6 @@ mat-tab-nav-bar {
   width: 150px;
   height: auto;
   border-radius: 8px;
-}
-
-
-.category-section h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-top: 20px;
-  border-bottom: 2px solid #e0e0e0;
-  padding-bottom: 10px;
 }
 
 
